test: add unit and integration tests for NotificationViewService
- Implemented `ShipmentEventListenerTest` to cover event handling logic for `ShipmentCreatedEvent`, `ShipmentDeliveredEvent`, and `ShipmentScannedEvent`.
- Added `TestConfig` to configure Kafka listener for tests.
- Enhanced pipeline building and error handling for Kafka Streams in `DeliveryAnalyticsProcessor`.
- Adjusted Kafka configuration for type headers and stricter serialization.
- Updated `NotificationServiceIntegrationTest` with Kafka mock integration and notification validation.
- Revised `application-test.yml` and `Docker` Kafka configuration for improved test isolation.